--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">StrokeApp</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_category_child">CategoryChildActivity</string>
+    <string name="title_activity_requests">RequestsActivity</string>
 </resources>
