--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_category_child">CategoryChildActivity</string>
     <string name="title_activity_requests">RequestsActivity</string>
     <string name="title_activity_make_request">MakeRequest</string>
+    <string name="title_activity_settings">Settings</string>
 </resources>
