just about finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_setPass">Login</string>
     <string name="title_activity_addPass">Add Password</string>
     <string name="title_activity_resetPass">Reset Password</string>
+    <string name="title_activity_choose_category">ChooseCategory</string>
 
 </resources>
